styles.css
/******************************************************************************
                        GENERAL STYLING
******************************************************************************/

html {
    scroll-behavior: smooth;
}

html, body {
    display: flex;
    flex-direction: row;
    
    justify-content: space-between;
    width: 100%;
    min-height: 100vh;
    margin: 0;
    font-family: "Roboto";
    color: white;
    background: #202731
}

body::-webkit-scrollbar {
    display: none;
}

#container {
    display: flex;
    
    width: 100%;
}

#left {
    display: flex;
    flex-direction: column;
    position: fixed;
    width: 40%;
    height: 100%;
    overflow-y: auto;
    
}

#left::-webkit-scrollbar {
    display: none;
}

#right {
    display: flex;
    flex-direction: column;
    width: 60%;
    height: 100%;
    margin-left: 40%;
    overflow-y: auto;
}

#right::-webkit-scrollbar {
    display: none;
}

section {   
    min-height: 100vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-bottom: 2px solid grey;
    
    
}

form {
    display: flex;
    flex-direction: column;
}

/*
footer {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    background-color: teal;
    width: 100%;
}*/

.section-header-container {
    display:flex;
    flex-direction: column;
    align-items: center;
    
}

.section-title {
    font-size: 70px;
    font-weight: bold;
    color: rgb(94 234 212);
}

.section-intro {
    font-size: 28px;
    color: rgb(148 163 184);
}

.button {
    width: 48px;
    height: 48px;
    text-decoration: none;
}

.hidden {
    opacity: 0;
    filter: blur(5px);
    transform: translateX(100%);
    transition: all 1s;
}

.show {
    opacity: 1;
    filter: blur(0);
    transform: translateX(0%);
}

.text-color-general {
    color: rgb(148 163 184);
}



/******************************************************************************
                        HERO SECTION
******************************************************************************/

#hero-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    border-bottom: none;
    
    
}

#hero-intro {
    color: rgb(148 163 184);
}

#hero-button-container {
    display: flex;
    flex-direction: row;
    width: 25%;
    justify-content: space-evenly;
    padding: 1em;
}

#contact-button {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0.5em;
    border: 0.1em, black, solid;
    border-radius: 0.5em;
    text-decoration: none;
    color: black;
}


/******************************************************************************
                        ABOUT ME SECTION
******************************************************************************/

#about-section {
}

#about-content-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    width: 100%;

}

#about-intro-content {
    border: 2px, teal, solid;
    border-radius: 0.5em;
    padding: 1em;
    box-shadow: 5px 5px;
    margin: 1em;
    color: teal;
}

#about-description-content {
    border: 2px, teal, solid;
    border-radius: 0.5em;
    padding: 1em;
    margin: 1em;
    box-shadow: 5px 5px;
    color: teal;
}


/******************************************************************************
                        SKILLS AND EXPERIENCE SECTION
******************************************************************************/

#skills-section {
}

#skills-content-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 1em;
    margin: 1em;
}


#skill-languages-container {
    /*
    border: 2px, black, solid;
    border-radius: 0.5em;*/
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    padding: 1em;
    margin: 1em;
    border: 2px, teal, solid;
    border-radius: 0.5em;
    box-shadow: 5px 5px;
    color: teal;
    
}

#skill-icons-container {
    /*border: 2px, black, solid;
    border-radius: 0.5em;*/
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1em;
    border: 3px, teal, solid;
    border-radius: 0.5em;
    box-shadow: 5px 5px;
    color: teal;
    
}

.skill-icons-row {
    padding: 1em;
    display: flex;
    flex-direction: row;
}

.skill-icons-row:nth-child(1) {
    transition-delay: 400ms;
}

.skill-icons-row:nth-child(2) {
    transition-delay: 600ms;
}

.skill-icons-row:nth-child(3) {
    transition-delay: 800ms;
}


.skills-button {
    text-decoration: none;
}

.skills-button-icon {
    height: 64px;
    width: 64px;
}


/******************************************************************************
                            PORTFOLIO SECTION
*******************************************************************************/

#portfolio-section {
    border-bottom: none;
}

#projects-container {
    display: flex;
    flex-direction: column;
    margin: 1em;
    padding: 1em;
    margin-left: 1em;
}

.project-container {
    margin: 1em;
    padding: 1em;
    border: 0.1em, teal, solid;
    border-radius: 0.5em;
    display: flex;
    align-items: center;
    box-shadow: 5px 5px;
    color: teal;
    
}

.project-container:nth-child(1) {
    transition-delay: 200ms;
}
.project-container:nth-child(2) {
    transition-delay: 400ms;
}
.project-container:nth-child(3) {
    transition-delay: 600ms;
}

/******************************************************************************
                            OTHER
*******************************************************************************/
@media(prefers-reduced-motion) {
    .hidden {
        transition: none;
    }
}

